--- a/tests2.html
+++ b/tests2.html
@@ -11,7 +11,12 @@
       var defaultColor = 'black';
 
       el.addEventListener('click', function () {
-        el.setAttribute('color', data.color);
+        const scene = document.querySelector('a-scene');
+        var entity = document.createElement('a-sphere');
+        entity.setAttribute('position', '-5 0 -3');
+        entity.setAttribute('radius', '1.25');
+        entity.setAttribute('color', '#AAA');
+        scene.appendChild(entity);
       });
 
       el.addEventListener('mouseleave', function () {
