--- a/index.html
+++ b/index.html
@@ -20,44 +20,13 @@
         this.material = new THREE.MeshStandardMaterial({color: data.color});
         this.mesh = new THREE.Mesh(this.geometry, this.material);
         el.setObject3D('mesh', this.mesh);
-      },
-
-      /**
-       * Update the mesh in response to property updates.
-       */
-      update: function (oldData) {
-        var data = this.data;
-        var el = this.el;
-
-        // If `oldData` is empty, then this means we're in the initialization process.
-        // No need to update.
-        if (Object.keys(oldData).length === 0) { return; }
-
-        // Geometry-related properties changed. Update the geometry.
-        if (data.width !== oldData.width ||
-            data.height !== oldData.height ||
-            data.depth !== oldData.depth) {
-          el.getObject3D('mesh').geometry = new THREE.BoxBufferGeometry(data.width, data.height,
-                                                                        data.depth);
-        }
-
-        // Material-related properties changed. Update the material.
-        if (data.color !== oldData.color) {
-          el.getObject3D('mesh').material.color = data.color;
-        }
       }
     });
     </script>
   </head>
   <body>
     <a-scene>
-        <a-entity element="name: H; radius: 2; color: orange" position="0 5 -3"></a-entity>
-        <a-entity box="width: 0.5; height: 0.25; depth: 1; color: orange" position="-10 0 -5"></a-entity>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+        <a-entity box="width: 0.5; height: 0.25; depth: 1; color: #FF0000" position="0 0 -5"></a-entity>
     </a-scene>
   </body>
 </html>
