--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   </head>
   <body>
     <a-scene>
-        <a-box height="5" width="5" depth="0.1" color="#EF2D5E" opacity = "0.2" position="0 1 -4" opacity="0.5">
+        <a-box create-atom-on-click height="5" width="5" depth="0.1" color="#EF2D5E" opacity = "0.2" position="0 1 -4" opacity="0.5">
           <a-text value="Create Atom" color="#000" wrap-count="20" position="-2 2 0" create-atom-on-click></a-text>
         </a-box>
-      <a-plane color='red' rotation="-90 0 0"
-         width="100" height="100"></a-plane>
+      <a-camera><a-cursor></a-cursor></a-camera>
     </a-scene>
-    <a-camera><a-cursor></a-cursor></a-camera>
     <script>
 
     AFRAME.registerComponent('create-atom-on-click', {
@@ -19,9 +17,10 @@
       init: function () {
         var el = this.el;  // <a-box>
         this.eventHandlerFn = function () {
+          console.log('clicked');
           const scene = document.querySelector('a-scene');
           var entity = document.createElement('a-sphere');
-          entity.setAttribute('position', '-5 0 -3');
+          entity.setAttribute('position', (Math.random() * -10) + ' 0 ' + (Math.random() * -10));
           entity.setAttribute('radius', '1.25');
           entity.setAttribute('color', '#AAA');
           scene.appendChild(entity);
