ball attached to camera

--- a/index.html
+++ b/index.html
@@ -3,12 +3,6 @@
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
   </head>
   <body>
-    <a-scene>
-        <a-box create-atom-on-click height="5" width="5" depth="0.1" color="#EF2D5E" opacity = "0.2" position="0 1 -4" opacity="0.5">
-          <a-text value="Create Atom" color="#000" wrap-count="20" position="-2 2 0" create-atom-on-click></a-text>
-        </a-box>
-      <a-camera><a-cursor></a-cursor></a-camera>
-    </a-scene>
     <script>
 
     AFRAME.registerComponent('create-atom-on-click', {
@@ -18,17 +12,26 @@
         var el = this.el;  // <a-box>
         this.eventHandlerFn = function () {
           console.log('clicked');
-          const scene = document.querySelector('a-scene');
+          var camera = document.querySelector('a-camera');
           var entity = document.createElement('a-sphere');
-          entity.setAttribute('position', (Math.random() * -10) + ' 0 ' + (Math.random() * -10));
-          entity.setAttribute('radius', '1.25');
+          entity.setAttribute('position', '0 0 -3');
+          entity.setAttribute('radius', '0.5');
           entity.setAttribute('color', '#AAA');
-          scene.appendChild(entity);
+          camera.appendChild(entity);
+
+          el.removeEventListener()
         }
 
         el.addEventListener('click', this.eventHandlerFn);
       }
     });
     </script>
+    <a-scene>
+        <a-box create-atom-on-click height="2" width="2" depth="0.1" color="#EF2D5E" opacity = "0.2" position="0 1 -4" opacity="0.5">
+        </a-box>
+      <a-camera>
+        <a-cursor></a-cursor>
+      </a-camera>
+    </a-scene>
   </body>
 </html>
