--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <a-scene>
-      <a-box create-atom-on-click id="menu" visible="true" height="2" width="2" depth="0.1" color="#EF2D5E" opacity = "0.2" position="0 1 -4"></a-box>
+      <a-box create-atom-on-click id="menu" height="2" width="2" depth="0.1" color="#EF2D5E" opacity = "0.2" position="0 1 -4"></a-box>
       <a-plane position="0 0 -4" rotation="-70 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
       <a-camera>
         <a-cursor></a-cursor>
