--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="./components/create-atom-on-click.js"></script>
     <script src="./components/drop-atom-on-click.js"></script>
+    <script src="./components/create-bond-on-click.js"></script>
+    <script src="./components/drop-bond-on-click.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-box create-atom-on-click id="menu" visible="true" height="2" width="2" depth="0.1" color="#EF2D5E" opacity = "0.2" position="0 1 -4"></a-box>
-      <a-plane position="0 0 -4" rotation="-70 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-camera>
-        <a-cursor></a-cursor>
-      </a-camera>
+        <a-box create-bond-on-click id="bond-menu" visible="true" height="2" width="2" depth="0.1" color="#FFF145" opacity = "0.2" position="2 1 -4"></a-box>
+        <a-box create-atom-on-click id="atom-menu" visible="true" height="2" width="2" depth="0.1" color="#EF2D5E" opacity = "0.2" position="0 1 -4"></a-box>
+        <a-plane position="0 0 -4" rotation="-70 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+        <a-camera>
+          <a-cursor></a-cursor>
+        </a-camera>
     </a-scene>
   </body>
 </html>
