--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <script src="./components/create-atom-on-click.js"></script>
     <script src="./components/drop-atom-on-click.js"></script>
+    <script src="./components/atom.js"></script>
   </head>
   <body>
     <a-scene>
