--- a/tests4.html
+++ b/tests4.html
@@ -3,12 +3,13 @@
   <head>
     <title>Event Set for Interactions - A-Frame</title>
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-event-set-component@3.0.3/dist/aframe-event-set-component.min.js"></script>
     <script src="components/atom.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-entity atom="sym: C; radius: 3; color: #AAA" position="0 0 -5"></a-entity>
+      <a-entity atom="sym: H; radius: 0.25; color: #AAA" position="0 1.5 -5"></a-entity>
+      <a-entity atom="sym: C; radius: 0.7; color: #AAA" position="0 1.5 -8"></a-entity>
+      <a-camera><a-cursor></a-cursor></a-camera>
     </a-scene>
   </body>
 </html>
