--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a-scene>
         <a-box create-bond-on-click id="bond-menu" visible="true" height="2" width="2" depth="0.1" color="#FFF145" opacity = "0.2" position="2 1 -4"></a-box>
         <a-box create-atom-on-click id="atom-menu" visible="true" height="2" width="2" depth="0.1" color="#EF2D5E" opacity = "0.2" position="0 1 -4"></a-box>
-        <a-plane position="0 0 -4" rotation="-70 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+        <a-entity drop-atom-on-click atom="sym: C; radius: 0.5; color: #AAA" position="0 0 -3"></a-entity>
         <a-camera>
           <a-cursor></a-cursor>
         </a-camera>
