--- a/tests4.html
+++ b/tests4.html
@@ -9,7 +9,9 @@
     <a-scene>
       <a-entity atom="sym: H; radius: 0.25; color: #AAA" position="0 1.5 -5"></a-entity>
       <a-entity atom="sym: C; radius: 0.7; color: #AAA" position="0 1.5 -8"></a-entity>
-      <a-camera><a-cursor></a-cursor></a-camera>
+      <a-camera>
+        <a-cursor></a-cursor>
+      </a-camera>
     </a-scene>
   </body>
 </html>
