--- a/index.html
+++ b/index.html
@@ -14,21 +14,10 @@
   <body>
     <a-scene>
         <a-box create-atom-buttons create-bond-buttons id="menu" height="5" width="3" depth="0.1" color="#EF2D5E" opacity = "0.2" position="0 2.5 -4"></a-box>
-        <a-entity id="start" atom="sym: C; radius: 0.3; color: #AAA" position="-3 0 -3" aabb-collider="objects: a-cylinder"></a-entity>
+        <a-entity id="atom" atom="sym: C; radius: 0.3; color: #AAA" position="-3 0 -3" aabb-collider="objects: a-cylinder"></a-entity>
         <a-camera>
           <a-cursor></a-cursor>
         </a-camera>
     </a-scene>
-    <script>
-      const scene = document.querySelector('a-scene');
-      var entity = scene.querySelector('#start');
-      
-      entity.addEventListener('hitstart', function () {
-        var intersecting_bond = entity.components['aabb-collider']['closestIntersectedEl'];
-        entity.setAttribute('material.color', 'green');
-        intersecting_bond.setAttribute('material.color', 'green');
-        console.log('got it');
-      });
-    </script>
   </body>
 </html>
