--- a/tests4.html
+++ b/tests4.html
@@ -3,7 +3,7 @@
   <head>
     <title>Event Set for Interactions - A-Frame</title>
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-    <script src="components/atom2.js"></script>
+    <script src="components/atom.js"></script>
   </head>
   <body>
     <a-scene>
